kubernetes/apps/base/kube-prometheus-stack/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    app.kubernetes.io/name: monitoring
    app.kubernetes.io/part-of: apps
    prometheus: "true"
